# new_message_data

./: .gitignore  main.py  pyproject.toml
eval_result/引导式讲题辅导/: Kimi-K25.json  glm-5.json  qwen3.5-397b.json
eval_result/情境化出题导师/: Kimi-K25.json  glm-5.json  qwen3.5-397b.json
eval_result/知识点讲解导师/: Kimi-K25.json  glm-5.json  qwen3.5-397b.json
eval_result/跨学科教案生成导师/: Kimi-K25.json  glm-5.json  qwen3.5-397b.json
message_to_score/: API.md  README.md  agent_list.json  eval.py  pyproject.toml  secret.json.example  server.py  server_test.py  stats.py
visual/: README.md  plot_eval_results.py  plot_scene_radar.py
visual/output/: generated_files.txt
visual/output/radar/: radar_generated_files.txt
四个场景/引导式讲题辅导/: config.yaml
四个场景/引导式讲题辅导/q_237018634fc4/qz__Kimi-K25/: conversation-messages.json  run.json  student-decision-log.json  student-teacher-transcript.json  teacher-last-reply.json  teacher-messages.json
四个场景/引导式讲题辅导/q_237018634fc4/qz__glm-5/: conversation-messages.json  run.json  student-decision-log.json  student-teacher-transcript.json  teacher-last-reply.json  teacher-messages.json
四个场景/引导式讲题辅导/q_237018634fc4/qz__qwen3.5-397b/: conversation-messages.json  run.json  student-decision-log.json  student-teacher-transcript.json  teacher-last-reply.json  teacher-messages.json
四个场景/引导式讲题辅导/q_2987c36c262e/qz__Kimi-K25/: conversation-messages.json  run.json  student-decision-log.json  student-teacher-transcript.json  teacher-last-reply.json  teacher-messages.json
四个场景/情境化出题导师/: config.yaml
四个场景/知识点讲解导师/: config.yaml
四个场景/跨学科教案生成导师/: config.yaml
(+786 files in other folders)
